--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,5 +12,10 @@ button{
     padding: 50px;
     object-fit: contain;
     height: 175px;
-    width: 1020px;
+    width: 100%;
+    margin-top: 10px;
+}
+
+.gifDiv{
+    display: inline-block;
 }
